--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/nanoid": "^3.0.0",
     "classnames": "^2.5.1",
     "mediasoup-client": "^3.10.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "nanoid": "^5.1.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1"
   },
