--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "mediasoup-client": "^3.10.1",
+    "mediasoup": "^3.15.7",
+    "mediasoup-client": "^3.7.2",
     "nanoid": "^5.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
