--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
     "classnames": "^2.5.1",
-    "mediasoup": "^3.15.7",
+    "lucide-react": "^0.510.0",
     "mediasoup-client": "^3.7.2",
     "nanoid": "^5.1.5",
     "react": "^18.3.1",
@@ -31,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
