added room logic

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,6 +10,12 @@
   ],
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    }
   },
 }
