--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daily-co/daily-react": "^0.22.0",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.510.0",
     "mediasoup-client": "^3.7.2",
     "nanoid": "^5.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.1",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.6.0",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
