--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.9.0",
     "lucide-react": "^0.510.0",
     "mediasoup-client": "^3.7.2",
     "nanoid": "^5.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
-    "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3"
   },
